--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "framer-motion": "^12.26.2",
+    "immer": "^11.1.3",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -19,7 +21,9 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zundo": "^2.3.0",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
