--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "driver.js": "^1.4.0",
     "framer-motion": "^12.26.2",
     "immer": "^11.1.3",
     "lucide-react": "^0.545.0",
