--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,14 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "zundo": "^2.3.0",
     "zustand": "^4.5.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +49,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.18"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.18",
+    "vite": "^5.1.0"
   }
 }
