--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,5 +1,5 @@
 upstream backend {
-    server 127.0.0.1:8000;
+    server backend:8000;
 }
 
 server {
@@ -27,7 +27,7 @@ server {
 
     # API 프록시
     location /api/ {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://backend;
 
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -46,7 +46,17 @@ server {
     
     # Django Admin
     location /admin/ {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://backend;
+
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_read_timeout 300;
+    }
+
+    # Media (proxy to backend)
+    location /media/ {
+        proxy_pass http://backend;
 
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
